--- a/resources/config.yml
+++ b/resources/config.yml
@@ -1,8 +1,9 @@
+
 #         General Settings         #
 
 # If you start a raid, and stop shooting for 'x minutes or hours' then,
 # the defending faction will receive a shield.
-explosion-threshold: 15 minute
+explosion-threshold: 15 minutes
 
 # This is how long the shield will last after a faction
 # has successfully defended a raid.
@@ -21,16 +22,19 @@ prevent-break:
 # Prevent the use of the following items during raid defense.
 # Note: Here you should place the item type of your genbuckets.
 prevent-use:
-- SPAWN_EGG
-- BUCKET
+- MONSTER_EGG
 
 # Prevent the use of certain commands (by the defenders) during raid.
-# Here we disable three faction commands. "f" includes "factions" as well
+# Here we disable three faction commands. "f" auto includes "factions" as well
 prevent-commands:
 - f chest
 - f pv
 - f vault
 
+#         Gui Settings         #
+
+raid-list-gui: '&8Raid List'
+raid-gui: '&8Raid Gui'
 
 #         General Messages         #
 
@@ -40,41 +44,45 @@ cannot-use: '&eYou cannot use this item while being raided.'
 cannot-execute: '&eYou cannot execute this command while being raided.'
 cannot-disband: '&eYou cannot disband your faction while a raid is active.'
 cannot-leave: '&eYou cannot leave your faction while a raid is active.'
-
+cannot-command: '&eYou can not use this command while being raided.'
+cannot-unclaim: '&eYou cannot unclaim land while being raided.'
+shield: '&7You have a faction shield for: &a%time%'
 
 #         Raid Start          #
 
-raid-start-title: '&cRaid Started'
-raid-start-subtitle: '&cYour faction has initiated a raid on %faction%'
+raid-start-title: ''
+raid-start-subtitle: '&cYour faction has initiated a raid, go fight!'
 raid-start:
 - ''
-- '&cYou have initiated a raid on: &f%faction% &7(%online% Online)'
+- '&cYou have initiated a raid on: &7%faction% (%online% Online)'
 - ''
-- '&cYou may type &f/raid&c for additional information.'
+- '&cYou may type &7/raid&c for additional information.'
 - ''
+
 
 #         Raid Defense         #
 
-raid-defense-title: '&cRaid Defense'
+raid-defense-title: ''
 raid-defense-subtitle: '&cYou are being raided, go defend your base!'
 raid-defense:
 - ''
-- '&cYou are being raided by: &f%faction% &7(%online% Online)'
+- '&cYou are being raided by: &7%faction% (%online% Online)'
 - ''
-- '&cYou may type &f/raid&c for additional information.'
+- '&cYou may type &7/raid&c for additional information.'
 - ''
 
 #         Items          #
 
 raid-item:
-  name: '&8&l[&4&l!&8&l] &c&lYOU ARE CURRENTLY IN A RAID'
+  name: '&c&lYOU ARE CURRENTLY IN A RAID'
   lore:
+    - '&8%date%'
     - ''
-    - '&8&lRAIDING: &f%attacker% &7(%onlineAttackers% Online)'
-    - '&8&lDEFENDING: &f%defender% &7(%onlineDefenders% Online)'
+    - '&8&lRAIDING: &f%attacker% &a(%onlineAttackers% Online)'
+    - '&8&lDEFENDING: &f%defender% &a(%onlineDefenders% Online)'
     - ''
-    - '&7The faction actively raiding must fire TNT once every'
-    - '&715 minutes to remain in raid.'
+    - '&7The faction actively raiding must fire TNT '
+    - '&7once every 15 minutes to remain in raid.'
     - ''
     - '&7While this raid is active, the defending faction'
     - '&7will be unable to mine spawners or regen walls.'
