--- a/resources/plugin.yml
+++ b/resources/plugin.yml
@@ -2,6 +2,7 @@ name: RaidTimers
 version: 0.0.1
 main: com.cloth.RaidTimers
 depend: [Factions]
+softdepend: [PlaceholderAPI]
 commands:
   raid:
     description: Opens the Raid gui.
